[gd_scene load_steps=9 format=2]

[ext_resource path="res://den/Den.gd" type="Script" id=1]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.450262 )
colors = PoolColorArray( 0, 0.015625, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 3 )
width = 50

[sub_resource type="CircleShape2D" id=4]
radius = 25.0

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0, 0.0419922, 1, 1 )

[sub_resource type="GradientTexture2D" id=6]
gradient = SubResource( 5 )
width = 32
height = 32

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 1, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=8]
gradient = SubResource( 7 )
width = 32
height = 32

[node name="Den" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 50 )
texture = SubResource( 2 )

[node name="NewRequestTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="RequestTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="Request" type="Control" parent="."]
margin_left = -65.0
margin_top = -186.0
margin_right = 65.0
margin_bottom = -35.0

[node name="PanelContainer" type="PanelContainer" parent="Request"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureProgress" type="TextureProgress" parent="Request"]
margin_left = 9.0
margin_top = 8.0
margin_right = 41.0
margin_bottom = 40.0
texture_under = SubResource( 6 )
texture_progress = SubResource( 8 )
fill_mode = 4

[node name="Label" type="Label" parent="Request"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -23.5
margin_right = 63.0
margin_bottom = 24.5
text = "potato: 2
tomato: 1
carrot: 3"

[node name="Health" type="Control" parent="."]
margin_left = -48.0
margin_top = 33.0
margin_right = 49.0
margin_bottom = 54.0

[node name="Label" type="Label" parent="Health"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1

[connection signal="timeout" from="NewRequestTimer" to="." method="_on_NewRequestTimer_timeout"]
[connection signal="timeout" from="RequestTimer" to="." method="_on_RequestTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
